--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.active {
+  color: rgb(0, 102, 255);
+  text-shadow: 1px 2px 12px rgba(0, 0, 0, 0.308);
+}
